--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ transformers==4.35.2
 torch==2.1.1
 sentencepiece==0.1.99
 protobuf==4.25.1
+numpy==1.26.4  # Fix compatibility with PyTorch
 
 # HTTP Client
 aiohttp==3.9.1
